--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -55,7 +55,7 @@ nav a:last-child {
     background-color: #D8D8D8;
 }
 
-.banner img {
+.banner img { /*FIXME not proper width/height */
     width: 60%;
     height: auto;
     padding: 32px 40px 32px 24px
@@ -84,4 +84,52 @@ nav a:last-child {
 .learn h2 {
     font-size: 35px;
     font-weight: 800;
+}
+
+/* ===INFORMATION SECTION STYLES=== */
+
+.grid {
+    display: flex;
+    flex-direction: column;
+    width: 423px;
+    flex: 1;
+    border-left: 1px solid #D8D8D8;
+    padding-top: 16px;
+}
+
+.grid img {
+    height: auto;
+    width: 35%;
+    height: 35%;
+    padding: 16px;
+}
+
+.grid .info-container:last-child {
+    background-color: #D8D8D8;
+}
+
+.information {
+    display: flex;
+}
+
+.info-container {
+    display: flex;
+    border-bottom: 1px solid #D8D8D8;
+    
+}
+
+.information-main {
+    width: 100%;
+    flex: 1.5;
+    padding: 32px 24px;
+}
+
+.information-main img {
+    width: 100%;
+    height: auto;
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
 }
