--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -149,6 +149,7 @@ nav a:last-child {
 .information-main h2 {
     font-size: 2.2rem;
     margin-bottom: 24px;
+    margin-top: 32px;
 }
 
 .information-main img {
@@ -178,4 +179,54 @@ nav a:last-child {
 
 .text-container h3 {
     margin-bottom: 0;
+}
+
+/* ===COURSES SECTION STYLING=== */
+
+.course-container .txt-container {
+    height: 140px;
+    margin: 13px 16px 8px 16px;
+}
+
+.courses {
+    background-color: #D8D8D8;
+    padding-bottom: 32px;
+}
+
+.courses h2 {
+    font-size: 2rem;
+    padding-top: 32px;
+    padding-bottom: 22px;
+    text-align: center;
+    margin: 0;
+}
+
+.course-container {
+    justify-content: center;
+    width: 100%;
+    background-color: #fff;
+    padding-top: 0;
+}
+
+.courses-container {
+    width: 75%;
+    margin: 0 12.5% 20px 12.5%;
+}
+
+.courses-container img {
+    width: 100%;
+    margin-bottom: 0;
+}
+
+.middle {
+    margin-left: 32px;
+    margin-right: 32px;
+}
+
+.middle p {
+    margin-bottom: 8px;
+}
+
+.txt-container h3 {
+    margin-top: 0;
 }
